--- a/accountbook-web/pom.xml
+++ b/accountbook-web/pom.xml
@@ -35,6 +35,7 @@
 				<configuration>
 					<manifestLocation>META-INF</manifestLocation>
 					<instructions>
+						<Bundle-SymbolicName>de.mixomat.accountbook.web</Bundle-SymbolicName>
 						<Export-Package>
 							!org.accountbook.web.internal,org.accountbook.web*
 						</Export-Package>
