added simple annotation based mvc controller

--- a/accountbook-web/pom.xml
+++ b/accountbook-web/pom.xml
@@ -11,8 +11,7 @@
 	<packaging>bundle</packaging>
 	<name>accountbook web module</name>
 	<version>1.0-SNAPSHOT</version>
-	<url>http://www.springframework.org/osgi
-	</url>
+	<url>http://www.springframework.org/osgi</url>
 	<build>
 		<resources>
 			<resource>
@@ -33,18 +32,14 @@
 				<version>1.4.0</version>
 				<extensions>true</extensions>
 				<configuration>
+					<unpackBundle>true</unpackBundle>
 					<manifestLocation>META-INF</manifestLocation>
 					<instructions>
-						<Bundle-SymbolicName>de.mixomat.accountbook.web
-						</Bundle-SymbolicName>
-						<Export-Package>
-							!org.accountbook.web.internal,org.accountbook.web*
-						</Export-Package>
+						<Bundle-SymbolicName>de.mixomat.accountbook.web</Bundle-SymbolicName>
+						<Export-Package> !org.accountbook.web.internal,org.accountbook.web*</Export-Package>
 						<Import-Package>*</Import-Package>
-						<Include-Resource>src/main/resources
-						</Include-Resource>
-						<Module-Type>Web</Module-Type>
-						<Web-ContextPath>accountbook</Web-ContextPath>
+						<Include-Resource>src/main/resources</Include-Resource>
+						<_include>src/main/resources/META-INF/MANIFEST.MF</_include>
 					</instructions>
 				</configuration>
 			</plugin>
@@ -63,8 +58,7 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin
-				</artifactId>
+				<artifactId>maven-resources-plugin</artifactId>
 				<version>2.3</version>
 				<executions>
 					<execution>
@@ -79,8 +73,7 @@
 								<resource>
 									<directory>target/</directory>
 									<includes>
-										<include>${project.build.finalName}.jar
-										</include>
+										<include>${project.build.finalName}.jar</include>
 									</includes>
 								</resource>
 							</resources>
@@ -95,57 +88,46 @@
 			<snapshots />
 			<id>i21-s3-osgi-repo</id>
 			<name>i21 osgi artifacts repo</name>
-			<url>http://maven.springframework.org/osgi
-			</url>
+			<url>http://maven.springframework.org/osgi</url>
 		</repository>
 		<repository>
 			<id>i21-s3-maven-repo</id>
 			<name>i21 S3 milestone repo</name>
-			<url>http://maven.springframework.org/milestone
-			</url>
+			<url>http://maven.springframework.org/milestone</url>
 		</repository>
 		<repository>
-			<id>com.springsource.repository.bundles.external
-			</id>
-			<name>SpringSource Enterprise Bundle Repository -
-				External Bundle Releases</name>
-			<url>http://repository.springsource.com/maven/bundles/external
-			</url>
+			<id>com.springsource.repository.bundles.external</id>
+			<name>SpringSource Enterprise Bundle Repository - External Bundle Releases</name>
+			<url>http://repository.springsource.com/maven/bundles/external</url>
 		</repository>
 		<repository>
 			<id>eclipse-repository</id>
 			<name>Eclipse Repository</name>
-			<url>http://repo1.maven.org/eclipse/
-			</url>
+			<url>http://repo1.maven.org/eclipse/</url>
 		</repository>
 		<repository>
 			<id>spring-ext</id>
 			<name>Spring External Dependencies Repository</name>
-			<url>
-				https://springframework.svn.sourceforge.net/svnroot/springframework/repos/repo-ext/
-			</url>
+			<url> https://springframework.svn.sourceforge.net/svnroot/springframework/repos/repo-ext/</url>
 		</repository>
 		<repository>
 			<id>jboss-repo</id>
 			<name>JBoss Repository</name>
-			<url>http://repository.jboss.com/maven2/
-			</url>
+			<url>http://repository.jboss.com/maven2/</url>
 		</repository>
 	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
 			<id>maven-repo</id>
 			<name>maven repo</name>
-			<url>http://repo1.maven.org/maven2/
-			</url>
+			<url>http://repo1.maven.org/maven2/</url>
 		</pluginRepository>
 	</pluginRepositories>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
-			<version>${spring.maven.artifact.version}
-			</version>
+			<version>${spring.maven.artifact.version}</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>commons-logging</artifactId>
@@ -156,8 +138,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-			<version>${spring.maven.artifact.version}
-			</version>
+			<version>${spring.maven.artifact.version}</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>commons-logging</artifactId>
@@ -168,8 +149,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>${spring.maven.artifact.version}
-			</version>
+			<version>${spring.maven.artifact.version}</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>aopalliance</artifactId>
@@ -182,28 +162,25 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-		<groupId>org.springframework</groupId>
+			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.maven.artifact.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>com.springsource.slf4j.org.apache.commons.logging
-			</artifactId>
+			<artifactId>com.springsource.slf4j.org.apache.commons.logging</artifactId>
 			<version>${slf4j.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>com.springsource.slf4j.api
-			</artifactId>
+			<artifactId>com.springsource.slf4j.api</artifactId>
 			<version>${slf4j.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>com.springsource.slf4j.log4j
-			</artifactId>
+			<artifactId>com.springsource.slf4j.log4j</artifactId>
 			<version>${slf4j.version}</version>
 			<scope>provided</scope>
 			<exclusions>
@@ -212,8 +189,7 @@
 					<groupId>log4j</groupId>
 				</exclusion>
 				<exclusion>
-					<artifactId>com.springsource.org.apache.log4j
-					</artifactId>
+					<artifactId>com.springsource.org.apache.log4j</artifactId>
 					<groupId>org.apache.log4j</groupId>
 				</exclusion>
 			</exclusions>
@@ -227,8 +203,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>${spring.maven.artifact.version}
-			</version>
+			<version>${spring.maven.artifact.version}</version>
 			<scope>test</scope>
 			<exclusions>
 				<exclusion>
@@ -255,8 +230,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.aopalliance</groupId>
-			<artifactId>com.springsource.org.aopalliance
-			</artifactId>
+			<artifactId>com.springsource.org.aopalliance</artifactId>
 			<version>1.0.0</version>
 			<scope>provided</scope>
 		</dependency>
@@ -272,6 +246,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>org.springframework.web.servlet</artifactId>
+			<version>2.5.5.A</version>
+		</dependency>
+		<dependency>
 			<groupId>de.mixomat</groupId>
 			<artifactId>accountbook-domain</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
@@ -280,8 +259,7 @@
 	</dependencies>
 	<properties>
 		<equinox.ver>3.2.2</equinox.ver>
-		<spring.maven.artifact.version>2.5.5
-		</spring.maven.artifact.version>
+		<spring.maven.artifact.version>2.5.5</spring.maven.artifact.version>
 		<slf4j.version>1.5.0</slf4j.version>
 		<spring.osgi.version>1.1.2</spring.osgi.version>
 	</properties>
