--- a/accountbook-web/pom.xml
+++ b/accountbook-web/pom.xml
@@ -9,7 +9,7 @@
 	<groupId>de.mixomat</groupId>
 	<artifactId>accountbook-web</artifactId>
 	<packaging>bundle</packaging>
-	<name>accountbook web module</name>
+	<name>accountbook web bundle</name>
 	<version>1.0-SNAPSHOT</version>
 	<url>http://www.springframework.org/osgi</url>
 	<build>
