--- a/accountbook-repository-hibernate/pom.xml
+++ b/accountbook-repository-hibernate/pom.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>accountbook</artifactId>
 		<groupId>de.mixomat</groupId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.accountbook.db</groupId>
-	<artifactId>accountbook-db</artifactId>
+	<groupId>org.accountbook</groupId>
+	<artifactId>accountbook-repository-hibernate</artifactId>
 	<packaging>bundle</packaging>
-	<name>accountbook db bundle</name>
-	<version>1.0-SNAPSHOT</version>
+	<name>Spring dm Bundle</name>
+	<version>1.0.0-SNAPSHOT</version>
 	<url>http://www.springframework.org/osgi</url>
 	<properties>
 		<slf4j.version>1.4.3</slf4j.version>
@@ -102,17 +102,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.hsqldb</groupId>
-			<artifactId>com.springsource.org.hsqldb</artifactId>
-			<version>1.8.0.9</version>
-			<scope>provided</scope>
+			<groupId>org.accountbook</groupId>
+			<artifactId>accountbook-domain</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>com.springsource.org.apache.commons.dbcp</artifactId>
-			<version>1.2.2.osgi</version>
-		</dependency>
-		
 	</dependencies>
 
   <!-- for packaging as an OSGi bundle, we use the maven-bundle-plugin -->
@@ -142,7 +135,7 @@
 				<configuration>
 					<manifestLocation>META-INF</manifestLocation>
 					<instructions>
-						<Export-Package>!org.mixomat.impl,org.mixomat*</Export-Package>
+						<Export-Package>!org.accountbook.repository.hibernate.internal,org.accountbook.repository.hibernate*</Export-Package>
 						<Import-Package>*</Import-Package>
                <!-- 
                   add ,plugin.xml if it's present i.e.
