--- a/accountbook-repository-hibernate/pom.xml
+++ b/accountbook-repository-hibernate/pom.xml
@@ -106,6 +106,11 @@
 			<artifactId>accountbook-domain</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.accountbook</groupId>
+			<artifactId>accountbook-db</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
   <!-- for packaging as an OSGi bundle, we use the maven-bundle-plugin -->
