--- a/accountbook-repository-hibernate/src/test/resources/unitils.properties
+++ b/accountbook-repository-hibernate/src/test/resources/unitils.properties
@@ -1,3 +1,3 @@
 database.driverClassName=org.hsqldb.jdbcDriver
-database.url=jdbc:hsqldb:file:/tmp/accountbook-db
+database.url=jdbc:hsqldb:file:/tmp/accountbook-test-db
 database.dialect=hsqldb
