--- a/accountbook-repository-hibernate/.settings/org.maven.ide.eclipse.prefs
+++ b/accountbook-repository-hibernate/.settings/org.maven.ide.eclipse.prefs
@@ -1,8 +1,9 @@
-#Tue Feb 10 19:45:27 CET 2009
+#Mon Mar 09 22:13:26 CET 2009
 activeProfiles=
 eclipse.preferences.version=1
 fullBuildGoals=process-test-resources
 includeModules=false
 resolveWorkspaceProjects=true
 resourceFilterGoals=process-resources resources\:testResources
+skipCompilerPlugin=true
 version=1
