--- a/accountbook-repository-hibernate/pom.xml
+++ b/accountbook-repository-hibernate/pom.xml
@@ -86,7 +86,14 @@
 			<artifactId>accountbook-db</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
+		
 		<!-- test scoped dependencies -->
+        <dependency>
+            <groupId>org.junit</groupId>
+            <artifactId>com.springsource.org.junit</artifactId>
+            <version>4.5.0</version>
+            <scope>test</scope>
+        </dependency>
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>com.springsource.org.hsqldb</artifactId>
