--- a/pom.xml
+++ b/pom.xml
@@ -97,9 +97,9 @@
 
 	<!-- test scoped dependencies -->
 		<dependency>
-			<groupId>org.junit</groupId>
-			<artifactId>com.springsource.org.junit</artifactId>
-			<version>4.4.0</version>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.4</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -112,6 +112,7 @@
 			<groupId>org.springframework.osgi</groupId>
 			<artifactId>org.springframework.osgi.test</artifactId>
 			<version>${spring.osgi.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.aopalliance</groupId>
