--- a/accountbook-db/pom.xml
+++ b/accountbook-db/pom.xml
@@ -8,52 +8,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.accountbook</groupId>
 	<artifactId>accountbook-db</artifactId>
-	<packaging>bundle</packaging>
+	<packaging>jar</packaging>
 	<name>accountbook db bundle</name>
 	<version>1.0.0-SNAPSHOT</version>
 	<build>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-			</resource>
-			<resource>
-				<directory>.</directory>
-				<includes>
-					<include>plugin.xml</include>
-					<include>META-INF/*</include>
-				</includes>
-			</resource>
-		</resources>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<extensions>true</extensions>
-				<version>1.4.3</version>
-				<configuration>
-					<manifestLocation>META-INF</manifestLocation>
-					<instructions>
-						<Export-Package>org.accountbook.db*</Export-Package>
-						<Import-Package>*</Import-Package>
-						<Include-Resource>src/main/resources</Include-Resource>
-						<_include>src/main/resources/META-INF/MANIFEST.MF</_include>
-					</instructions>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>bundle-manifest</id>
-						<phase>process-classes</phase>
-						<goals>
-							<goal>manifest</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
 	</build>
 	<dependencies>
 		<dependency>
