--- a/pom.xml
+++ b/pom.xml
@@ -7,16 +7,18 @@
 	<version>1.0-SNAPSHOT</version>
 	<name>accountbook</name>
 	<modules>
-		<module>accountbook-domain</module>
 		<module>accountbook-db</module>
-		<module>accountbook-web</module>
+		<module>accountbook-domain</module>
 		<module>accountbook-repository-hibernate</module>
-	</modules>
+		<module>accountbook-service</module>
+		<module>accountbook-web</module>
+    <module>accountbook-test</module>
+  </modules>
 	<properties>
 		<slf4j.version>1.5.6</slf4j.version>
 		<spring.maven.artifact.version>2.5.5.A</spring.maven.artifact.version>
-		<spring.osgi.version>1.1.1.A</spring.osgi.version>
-		<equinox.ver>3.2.2</equinox.ver>
+		<spring.osgi.version>1.1.2.B</spring.osgi.version>
+		<equinox.ver>3.5.0.v20090311-1300</equinox.ver>
 		<spring.dm.server.path>/Users/marc/projects/springsource-dm-server-1.0.1.RELEASE/pickup</spring.dm.server.path>
 	</properties>
 	<build>
@@ -127,6 +129,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.7</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>org.springframework.test</artifactId>
 			<version>${spring.maven.artifact.version}</version>
@@ -144,10 +152,13 @@
 			<version>1.0.0</version>
 			<scope>test</scope>
 		</dependency>
-		<!--
-			<dependency> <groupId>org.eclipse.osgi</groupId> <artifactId>org.eclipse.osgi</artifactId> <version>${equinox.ver}</version> <type>jar</type>
-			<scope>test</scope> </dependency>
-		-->
+		<dependency>
+			<groupId>org.eclipse.osgi</groupId>
+			<artifactId>org.eclipse.osgi</artifactId>
+			<version>${equinox.ver}</version>
+			<type>jar</type>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.log4j</groupId>
 			<artifactId>com.springsource.org.apache.log4j</artifactId>
