--- a/accountbook-web/pom.xml
+++ b/accountbook-web/pom.xml
@@ -7,7 +7,7 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.accountbook</groupId>
-	<artifactId>accountbook.web</artifactId>
+	<artifactId>accountbook-web</artifactId>
 	<packaging>jar</packaging>
 	<name>accountbook web bundle</name>
 	<version>1.0.0-SNAPSHOT</version>
