--- a/accountbook-web/pom.xml
+++ b/accountbook-web/pom.xml
@@ -25,5 +25,10 @@
 			<artifactId>accountbook-domain</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.accountbook</groupId>
+			<artifactId>accountbook-service</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
