--- a/accountbook-web/pom.xml
+++ b/accountbook-web/pom.xml
@@ -8,17 +8,34 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.accountbook</groupId>
 	<artifactId>accountbook-web</artifactId>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	<name>accountbook web bundle</name>
 	<version>1.0.0-SNAPSHOT</version>
 	<url>http://www.springframework.org/osgi</url>
+
 	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.1-beta-1</version>
+				<configuration>
+					<packagingExcludes>WEB-INF/lib/**</packagingExcludes>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>org.springframework.web.servlet</artifactId>
 			<version>${spring.maven.artifact.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>com.springsource.javax.servlet</artifactId>
+			<version>2.4.0</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.accountbook</groupId>
