--- a/accountbook-web/src/main/webapp/WEB-INF/web.xml
+++ b/accountbook-web/src/main/webapp/WEB-INF/web.xml
@@ -1,87 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<web-app version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 	<display-name>accountbook</display-name>
 
 	<!-- log4j config location configuration -->
+	<!-- 
 	<context-param>
 		<param-name>log4jConfigLocation</param-name>
 		<param-value>classpath:log4j.properties</param-value>
 	</context-param>
 	<context-param>
 		<param-name>log4jRefreshInterval</param-name>
-		<!-- check config file every 2 seconds -->
 		<param-value>2000</param-value>
 	</context-param>
-
-	<!-- Spring Application Context locations -->
-	<!--
-		<context-param> <param-name>contextConfigLocation</param-name>
-		<param-value></param-value> </context-param>
-	-->
-	
-	<!-- JSF configuration -->
-	<context-param>
-		<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
-		<param-value>server</param-value>
-	</context-param>
-	<context-param>
-		<param-name>javax.faces.application.CONFIG_FILES</param-name>
-		<param-value>/WEB-INF/faces-config.xml</param-value>
-	</context-param> 
-	<!-- Use JSF view templates saved as *.xhtml, for use with Facelets -->
-	<context-param>
-		<param-name>javax.faces.DEFAULT_SUFFIX</param-name>
-		<param-value>.xhtml</param-value>
-	</context-param>
-    <!-- Enables special Facelets debug output during development -->
-	<context-param>
-		<param-name>facelets.DEVELOPMENT</param-name>
-		<param-value>true</param-value>
-	</context-param>
-  	<!-- Causes Facelets to refresh templates during development -->
-	<context-param>
-		<param-name>facelets.REFRESH_PERIOD</param-name>
-		<param-value>1</param-value>
-	</context-param>
+	 -->
 
 
 	<!-- start up Spring's Log4jConfigListener -->
+	<!-- 
 	<listener>
 		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
 	</listener>
+	 -->
+	 
+	<context-param>
+		<param-name>contextClass</param-name>
+		<param-value>com.springsource.server.web.dm.ServerOsgiBundleXmlWebApplicationContext</param-value>
+	</context-param>
 
 	<!-- start up Spring's ApplicationContext -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>	
+	</listener>
+
 
 
 	<!-- spring mvc servlet definition -->
-	<servlet>
-		<servlet-name>smartypants</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>accountbook</servlet-name>
-		<url-pattern>/app/*</url-pattern>
-	</servlet-mapping>
-	<!--
-		Just here so the JSF implementation can initialize, *not* used at
-		runtime
-	-->
-	<servlet>
-		<servlet-name>Faces Servlet</servlet-name>
-		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>Faces Servlet</servlet-name>
-		<url-pattern>*.faces</url-pattern>
-	</servlet-mapping>
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-	</welcome-file-list>
+  <servlet>
+    <servlet-name>accountbook</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>accountbook</servlet-name>
+    <url-pattern>/app/*</url-pattern>
+  </servlet-mapping>
+
+
+  <welcome-file-list>
+    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.htm</welcome-file>
+  </welcome-file-list>
 </web-app>
